# sawthat-frame

./: .gitignore  README.md  flake.nix
edge/: Cargo.toml  fastly.toml
edge/src/: datasource.rs  image_processing.rs  main.rs  palette.rs  sawthat.rs  text.rs  widget.rs
firmware/: Cargo.toml  README.md  partitions.csv
firmware/.cargo/: config.toml
firmware/src/: battery.rs  cache.rs  display.rs  framebuffer.rs  http.rs  https.rs  lib.rs  widget.rs
firmware/src/epd/: color.rs  command.rs  mod.rs
server/: Cargo.toml  build.rs
server/examples/: demo.html
server/src/: cache.rs  datasource.rs  deezer.rs  error.rs  image_processing.rs  main.rs  palette.rs  sawthat.rs  text.rs  widget.rs
