[package]
name = "concert-display-edge"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
# Fastly Compute runtime
fastly = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
png = "0.17"

# Font rendering
ab_glyph = "0.2"

# Logging
log = "0.4"

# URL encoding
urlencoding = "2.1"

[profile.release]
lto = true
opt-level = "s"
strip = "symbols"
