[package]
edition      = "2024"
name         = "sawthat-frame-firmware"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "sawthat-frame-firmware"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "log-04", "unstable", "psram"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
log                    = "0.4.27"

embassy-net = { version = "0.8.0", features = [
  "dhcpv4",
  "dns",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.7"
embedded-io-async = "0.7"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32s3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-futures = "0.1"
embassy-time = { version = "0.5.0", features = ["log"] }
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32s3",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = "1.2.0"
static_cell      = "2.1.1"

# E-paper display (using local epd module)
embedded-hal = "1.0"
embedded-hal-bus = "0.2"
embedded-graphics-core = "0.4"

# JSON parsing (no_std)
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.6"
heapless = "0.8"

# PNG decoding (no_std, no alloc)
minipng = "0.1"

# SD card storage for caching
embedded-sdmmc = "0.8"

# HTTP client with TLS support (use git for embedded-nal-async 0.9 compatibility)
reqwless = { git = "https://github.com/drogue-iot/reqwless", default-features = false, features = ["embedded-tls", "alloc"] }
embedded-nal-async = "0.9"



[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
