[package]
name = "sawthat-frame-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
png = "0.17"

# Font rendering
ab_glyph = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL encoding
urlencoding = "2.1"

# Error handling
thiserror = "2"

# Async trait
async-trait = "0.1"

[profile.release]
lto = true
opt-level = 3
